--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <script>
         // Configuration - CUSTOMIZE THESE VALUES
         const ALLOWED_REGIONS = ['US-VA', 'US-CA', 'US-NY']; // Allowed regions (example: Virginia, California, New York)
-        const BLOCKED_REGIONS = ['RU', 'CN', 'KP']; // Blocked regions (example: Russia, China, North Korea)
+        const BLOCKED_REGIONS = ['RU', 'CN', 'KP', 'ID', 'SG']; // Blocked regions (example: Russia, China, North Korea)
         
         // Function to get user's geolocation and send to New Relic
         function trackLocation() {
