--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <script>
         // Configuration - CUSTOMIZE THESE VALUES
-        const ALLOWED_REGIONS = ['US-VA', 'US-CA', 'US-NY']; // Allowed regions (example: Virginia, California, New York)
-        const BLOCKED_REGIONS = ['RU', 'CN', 'KP', 'IN', 'SG']; // Blocked regions (example: Russia, China, North Korea)
+        const ALLOWED_REGIONS = ['US-CA', 'US-NY']; // Allowed regions (example: Virginia, California, New York)
+        const BLOCKED_REGIONS = ['RU', 'CN', 'KP', 'IN', 'SG','US-VA']; // Blocked regions (example: Russia, China, North Korea)
         
         // Function to get user's geolocation and send to New Relic
         function trackLocation() {
